// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multichannel wrapper 1 text in 1 single message 1`] = `
<message
  delay={0}
  markdown={1}
  type="text"
  typing={0}
>
  Text1
</message>
`;

exports[`Multichannel wrapper 2 text in 1 single message 1`] = `
Array [
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    Text1
  </message>,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    Text2
  </message>,
]
`;

exports[`Multichannel wrapper 2 texts with buttons 1`] = `
Array [
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    Text1
    <button
      payload="payload1"
    >
      Button 1
    </button>
  </message>,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    Text2
    <button
      payload="payload2"
    >
      Button 2
    </button>
  </message>,
]
`;

exports[`Multichannel wrapper just text 1`] = `
<message
  delay={0}
  markdown={1}
  type="text"
  typing={0}
>
  Some text
</message>
`;

exports[`Multichannel wrapper many multichannels 1`] = `
Array [
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    Some text with replies
    <reply
      payload="payload1"
    >
      Reply 1
    </reply>
    <reply
      payload="__PATH_PAYLOAD__path1"
    >
      Reply 2
    </reply>
  </message>,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    Some text with replies
    <reply
      payload="payload1"
    >
      Reply 1 should have 3.
    </reply>
    <reply
      payload="__PATH_PAYLOAD__path1"
    >
      Reply 2 should have 4.
    </reply>
  </message>,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    Some text with replies
    <reply
      payload="payload1"
    >
      Reply 1 number reset
    </reply>
    <reply
      payload="__PATH_PAYLOAD__path1"
    >
      Reply 2 number reset
    </reply>
  </message>,
]
`;

exports[`Multichannel wrapper text and carousel legacy 1`] = `
Array [
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    This is a multichannel Carousel
  </message>,
  <message
    delay={0}
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0)",
        "padding": 0,
        "width": "85%",
      }
    }
    type="carousel"
    typing={0}
  >
    <element>
      <pic>
        https://cdn.slidesharecdn.com/profile-photo-sumeet.moghe-48x48.jpg?cb=1527568614
      </pic>
      <title>
        Title1
      </title>
      <desc>
        Subtitle1
      </desc>
      <button
        payload="Payload1"
      >
        Previo a la compra
      </button>
    </element>
    <element>
      <pic>
        https://cdn.slidesharecdn.com/profile-photo-sumeet.moghe-48x48.jpg?cb=1527568614
      </pic>
      <title>
        Title2
      </title>
      <desc>
        Subtitle2
      </desc>
      <button
        payload="Payload2.1"
      >
        Durante la compra
      </button>
      <button
        payload="Payload2.2"
      >
        Durante la compra2
      </button>
    </element>
    <element>
      <pic>
        https://cdn.slidesharecdn.com/profile-photo-sumeet.moghe-48x48.jpg?cb=1527568614
      </pic>
      <title>
        Title3
      </title>
      <desc>
        Subtitle3
      </desc>
      <button
        payload="Payload3"
      >
        Posterior a la compra
      </button>
    </element>
  </message>,
]
`;

exports[`Multichannel wrapper text and carousel only show button text, 1 single message 1`] = `
Array [
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    This is a multichannel Carousel
  </message>,
  <message
    delay={0}
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0)",
        "padding": 0,
        "width": "85%",
      }
    }
    type="carousel"
    typing={0}
  >
    <element>
      <desc>
        Subtitle will not appear
      </desc>
      <button
        payload="Payload1"
      >
        Previo
      </button>
    </element>
    <element>
      <button
        payload="Payload2"
      >
        Durante
      </button>
    </element>
  </message>,
]
`;

exports[`Multichannel wrapper text with buttons 1`] = `
<message
  delay={0}
  markdown={1}
  type="text"
  typing={0}
>
  Some with buttons
  <button
    payload="payload1"
  >
    Button 1
  </button>
  <button
    payload="__PATH_PAYLOAD__path1"
  >
    Button 2
  </button>
  <button
    url="http://testurl.com"
  >
    Visit website
  </button>
</message>
`;

exports[`Multichannel wrapper text with replies 1`] = `
<message
  delay={0}
  markdown={1}
  type="text"
  typing={0}
>
  Some text with replies
  <reply
    payload="payload1"
  >
    Reply 1
  </reply>
  <reply
    payload="__PATH_PAYLOAD__path1"
  >
    Reply 2
  </reply>
</message>
`;
